--- a/src/Blog/CoreBundle/Resources/public/css/style.css
+++ b/src/Blog/CoreBundle/Resources/public/css/style.css
@@ -78,3 +78,16 @@ a:hover, a:active {
 	color: #4f6e9f;
 	text-decoration: underline;
 }
+
+aside {
+	float: right;
+	width: 30%;
+	padding: 5px 15px;
+	margin: 5px;
+	background-color: #c3c3c3;
+	border: 1px solid #b5b5b5;
+}
+
+aside h3 {
+	font-weight: bold;
+}
