--- a/src/Blog/CoreBundle/Resources/views/Author/show.html.twig
+++ b/src/Blog/CoreBundle/Resources/views/Author/show.html.twig
@@ -1,7 +1,22 @@
-{% extends "::base.html.twig" %}
+{% extends "CoreBundle::layout:base.html.twig" %}
 
-{% block title %}CoreBundle:Author:show{% endblock %}
+{% block title %}
+    {{ 'post.by.author' | trans({'%name%': author.name}) }}
+{% endblock %}
 
-{% block body %}
-<h1>Welcome to the Author:show page</h1>
+{% block sidebar %}
+    <aside>
+    	<h2> {{ 'post.by' | trans }} </h2>
+    	<p> {{ author.name }} </p>
+    </aside>
+{% endblock %}
+
+{% block section %}
+    
+	{% for post in posts %}
+	    
+		{{ include('CoreBundle:Post:_post.html.twig', { post: post }) }}
+
+	{% endfor %}
+
 {% endblock %}
