--- a/src/Blog/CoreBundle/Resources/views/Post/_post.html.twig
+++ b/src/Blog/CoreBundle/Resources/views/Post/_post.html.twig
@@ -1,11 +1,12 @@
 <article>
 	<header>
-		<h2><a href="#">{{ post.title }}</a></h2>
+		<h2><a href="{{ path('blog_core_post_show', { slug: post.slug }) }}">{{ post.title }}</a></h2>
 		<p>
 			{{ 'post.on' | trans }} <time datetime="{{ post.createdAt | date('c') }}">{{ post.createdAt | date }}</time>
 			{{ 'by' | trans }} <a href="{{ path('blog_core_author_show', { slug: post.author.slug }) }}">{{ post.author.name }}</a>
 		</p>
 	</header>
-
+	{% set count = post.comments | length %}
+	<a href="{{ path('blog_core_post_show', { slug: post.slug }) }}#comments">{{ 'post.comments' | transchoice(count) }}</a>
 	<p>{{ post.body | truncate(400) }} &#8212; <a href="#">{{ 'readmore' | trans }} &raquo;</a></p>
 </article>
