--- a/src/Blog/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Blog/CoreBundle/Resources/views/layout.html.twig
@@ -19,6 +19,11 @@
 	{% block sidebar %}{% endblock %}
 
 	<section>
+		{% for type, messages in app.session.flashbag.all() %}
+		    {% for message in messages %}
+		        <p class="alert alert-success">{{ message }}</p>
+		    {% endfor %}
+		{% endfor %}
 		{% block section %}{% endblock %}
 	</section>
 
