--- a/src/Blog/AdminBundle/Resources/views/Author/index.html.twig
+++ b/src/Blog/AdminBundle/Resources/views/Author/index.html.twig
@@ -1,4 +1,6 @@
-{% extends '::base.html.twig' %}
+{% extends 'AdminBundle::layout.html.twig' %}
+
+{% block title %}Authors list{% endblock %}
 
 {% block body -%}
     <h1>Author list</h1>
