There are errors in the test suite and BlogController (66)

--- a/src/Blog/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Blog/AdminBundle/Resources/views/layout.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig' %}
+{% extends 'CoreBundle::layout.html.twig' %}
 
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ asset('bundles/admin/css/main.css') }}">
