--- a/src/Blog/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Blog/AdminBundle/Resources/views/layout.html.twig
@@ -1,7 +1,8 @@
 {% extends 'CoreBundle::layout.html.twig' %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" type="text/css" href="{{ asset('bundles/admin/css/main.css') }}">
+    <link href="{{ asset('css/bootstrap.css') }}" rel="stylesheet" media="screen">  
+    <link rel="stylesheet" type="text/css" href="{{ asset('bundles/core/css/style.css') }}">
 {% endblock %}
 
 {% block body %}
